--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 .jumbotron{
     margin: 0;
-    padding: 20px;
+    padding: 0;
     background-color: black;
     color: white;
    
@@ -10,13 +10,14 @@
     display:block;
     margin-left:auto;
     margin-right:auto;
-    width: 350px;
-    height: 250px;
+    width: 275px;
+    height: 225px;
 
 }
 
 .navbar{
     background-color: black;
+    font-family: 'Oswald', sans-serif;
 }
 .navbar.scrolled {
     background: rgb(68, 68, 68); /* IE */
@@ -91,3 +92,15 @@ a:active {
     margin-left: 100px;
  }
 
+
+#breadCrumbInfo {
+    font-family: 'Oswald', sans-serif;
+}
+#menuContainer{
+    font-family: 'Oswald', sans-serif;
+}
+
+.site-footer{
+    font-family: 'Oswald', sans-serif;
+
+}
