--- a/CSS/style.css
+++ b/CSS/style.css
@@ -102,9 +102,18 @@ a:active {
 
 .site-footer{
     font-family: 'Oswald', sans-serif;
+    margin-top:100px;
 
 }
 
 #contactRow{
+    font-family: 'Oswald', sans-serif;
+}
+
+.container-about{
+    background-color:lightgray;
+}
+
+.card-header{
     font-family: 'Oswald', sans-serif;
 }
